--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         -->
         <title>React App</title>
     </head>
-    <body>
+    <body id="index-body">
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
