--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>React App</title>
+        <title>Galleri 25</title>
     </head>
     <body id="index-body">
         <noscript>
